--- a/event-manager/src/main/webapp/i18n/fr/global.json
+++ b/event-manager/src/main/webapp/i18n/fr/global.json
@@ -8,6 +8,7 @@
             "entities": {
                 "main": "Entités",
                 "organizer": "Organizer",
+                "event": "Event",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
